# hdrprobe

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml
.claude/commands/: commit.md  release.md
.github/workflows/: release.yml
docs/: INTEGRATION-STDIN.md  MIGRATION-2.0.md  SCHEMA.md
src/: bits.rs  main.rs  model.rs  prefetch.rs  progress.rs  prores.rs  render.rs  sample.rs  shell.rs  vp9.rs
src/av1/: mod.rs  obu.rs  seq.rs
src/avc/: nal.rs  sps.rs
src/bdiso/: mod.rs  mpls.rs  udf.rs
src/container/: annexb.rs  av1.rs  mkv.rs  mod.rs  mp4.rs  ts.rs
src/dv/: levels.rs  mod.rs  rpu.rs
src/hdr/: mod.rs  sei.rs
src/hevc/: mod.rs  nal.rs  sps.rs
src/sidecar/: dv_xml.rs  hdr10plus_json.rs  mod.rs  rpu_bin.rs
testfiles/: .gitignore  README.md
testfiles/fixtures/: .gitkeep
