[package]
name = "hdrprobe"
version = "0.4.0"
edition = "2021"
rust-version = "1.85"
description = "Fast HDR / HDR10+ / Dolby Vision metadata inspector"
license = "MIT"
repository = "https://github.com/matthane/hdrprobe"
default-run = "hdrprobe"

[[bin]]
name = "hdrprobe"
path = "src/main.rs"

[dependencies]
dolby_vision = { version = "3.3.2", features = ["xml", "serde"] }
# DM-payload fingerprinting for the metadata-cadence verdict
# (`dv::levels::dm_fingerprint` serializes extension blocks through
# `ExtMetadataBlock::write`, whose writer type this crate owns); already in
# the tree via dolby_vision at the same version/features, so no new crate.
bitvec_helpers = { version = "3.1.6", default-features = false, features = ["bitstream-io"] }
memmap2 = "0.9"
rayon = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = "4"
supports-color = "3"
anyhow = "1"
thiserror = "2"
hdr10plus = { version = "2.1.5", features = ["json"] }

# Terminal width for value-line reflow (main.rs `terminal_width`); already in
# the tree transitively via memmap2 on unix, so this adds no new crate.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
# unwind (the default), *not* abort — `dv::rpu::guard` relies on `catch_unwind`
# to isolate panics from the third-party RPU/HDR10+ parsers on malformed input
# so one corrupt file can't abort a whole directory scan.

[profile.dev]
opt-level = 1
